--- a/notebooks/001_database_connection.ipynb
+++ b/notebooks/001_database_connection.ipynb
@@ -2,16 +2,420 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "661f81ce",
+   "execution_count": 1,
+   "id": "622bf9c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\user\\\\Documents\\\\mlops_with_aws\\\\notebooks'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os    \n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ec63ce4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "962b3ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\user\\\\Documents\\\\mlops_with_aws'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "661f81ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "029826ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mongodb+srv://oladipupo:oladipupo@taofeek-cluster.4rfckxa.mongodb.net/?retryWrites=true&w=majority&appName=taofeek-Cluster\n"
+     ]
+    }
+   ],
+   "source": [
+    "uri = os.getenv(\"MONGODB_URI\")\n",
+    "print(uri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "22a4b0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  case_id continent education_of_employee has_job_experience  \\\n",
+      "0  EZYV01      Asia           High School                  N   \n",
+      "1  EZYV02      Asia              Master's                  Y   \n",
+      "2  EZYV03      Asia            Bachelor's                  N   \n",
+      "3  EZYV04      Asia            Bachelor's                  N   \n",
+      "\n",
+      "  requires_job_training  no_of_employees  yr_of_estab region_of_employment  \\\n",
+      "0                     N            14513         2007                 West   \n",
+      "1                     N             2412         2002            Northeast   \n",
+      "2                     Y            44444         2008                 West   \n",
+      "3                     N               98         1897                 West   \n",
+      "\n",
+      "   prevailing_wage unit_of_wage full_time_position case_status  \n",
+      "0         592.2029         Hour                  Y      Denied  \n",
+      "1       83425.6500         Year                  Y   Certified  \n",
+      "2      122996.8600         Year                  Y      Denied  \n",
+      "3       83434.0300         Year                  Y      Denied  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd  \n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "csv_file = \"Data/Visadataset.csv\"\n",
+    "\n",
+    "df = pd.read_csv(csv_file)\n",
+    "print(df.head(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1b905b7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25480, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "20363279",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['case_id', 'continent', 'education_of_employee', 'has_job_experience',\n",
+      "       'requires_job_training', 'no_of_employees', 'yr_of_estab',\n",
+      "       'region_of_employment', 'prevailing_wage', 'unit_of_wage',\n",
+      "       'full_time_position', 'case_status'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "32e89edf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 25480 entries, 0 to 25479\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   case_id                25480 non-null  object \n",
+      " 1   continent              25480 non-null  object \n",
+      " 2   education_of_employee  25480 non-null  object \n",
+      " 3   has_job_experience     25480 non-null  object \n",
+      " 4   requires_job_training  25480 non-null  object \n",
+      " 5   no_of_employees        25480 non-null  int64  \n",
+      " 6   yr_of_estab            25480 non-null  int64  \n",
+      " 7   region_of_employment   25480 non-null  object \n",
+      " 8   prevailing_wage        25480 non-null  float64\n",
+      " 9   unit_of_wage           25480 non-null  object \n",
+      " 10  full_time_position     25480 non-null  object \n",
+      " 11  case_status            25480 non-null  object \n",
+      "dtypes: float64(1), int64(2), object(9)\n",
+      "memory usage: 2.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "15155448",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'case_id': 'EZYV01',\n",
+       "  'continent': 'Asia',\n",
+       "  'education_of_employee': 'High School',\n",
+       "  'has_job_experience': 'N',\n",
+       "  'requires_job_training': 'N',\n",
+       "  'no_of_employees': 14513,\n",
+       "  'yr_of_estab': 2007,\n",
+       "  'region_of_employment': 'West',\n",
+       "  'prevailing_wage': 592.2029,\n",
+       "  'unit_of_wage': 'Hour',\n",
+       "  'full_time_position': 'Y',\n",
+       "  'case_status': 'Denied'},\n",
+       " {'case_id': 'EZYV02',\n",
+       "  'continent': 'Asia',\n",
+       "  'education_of_employee': \"Master's\",\n",
+       "  'has_job_experience': 'Y',\n",
+       "  'requires_job_training': 'N',\n",
+       "  'no_of_employees': 2412,\n",
+       "  'yr_of_estab': 2002,\n",
+       "  'region_of_employment': 'Northeast',\n",
+       "  'prevailing_wage': 83425.65,\n",
+       "  'unit_of_wage': 'Year',\n",
+       "  'full_time_position': 'Y',\n",
+       "  'case_status': 'Certified'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ==== Convert CSV Data to Dictionary ====\n",
+    "data = df.to_dict(orient=\"records\")\n",
+    "data[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bb8638f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25480"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['case_id'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ee003701",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted 25480 records into MongoDB collection 'users'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== MongoDB Connection =====\n",
+    "client = MongoClient(uri)\n",
+    "db = client['usa_visa_db']\n",
+    "collection = db['usa_visa']\n",
+    "\n",
+    "# === Insert into MongoDB ===\n",
+    "collection.insert_many(data)\n",
+    "\n",
+    "collection.create_index(\"case_id\", unique=True)\n",
+    "\n",
+    "print(f\"Inserted {len(data)} records into MongoDB collection 'users'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fe37852e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = list(collection.find())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "01ff91a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  case_id continent education_of_employee has_job_experience  \\\n",
+      "0  EZYV01      Asia           High School                  N   \n",
+      "1  EZYV02      Asia              Master's                  Y   \n",
+      "2  EZYV03      Asia            Bachelor's                  N   \n",
+      "3  EZYV04      Asia            Bachelor's                  N   \n",
+      "4  EZYV05    Africa              Master's                  Y   \n",
+      "\n",
+      "  requires_job_training  no_of_employees  yr_of_estab region_of_employment  \\\n",
+      "0                     N            14513         2007                 West   \n",
+      "1                     N             2412         2002            Northeast   \n",
+      "2                     Y            44444         2008                 West   \n",
+      "3                     N               98         1897                 West   \n",
+      "4                     N             1082         2005                South   \n",
+      "\n",
+      "   prevailing_wage unit_of_wage full_time_position case_status  \n",
+      "0         592.2029         Hour                  Y      Denied  \n",
+      "1       83425.6500         Year                  Y   Certified  \n",
+      "2      122996.8600         Year                  Y      Denied  \n",
+      "3       83434.0300         Year                  Y      Denied  \n",
+      "4      149907.3900         Year                  Y   Certified  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data).drop(columns=[\"_id\"])\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6db2a1d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from usa_visa.utils.main_utils import load_yaml \n",
+    "\n",
+    "output = load_yaml(r\"C:\\Users\\user\\Documents\\mlops_with_aws\\config\\schema.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3ac25367",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'columns': [{'case_id': 'category'}, {'continent': 'category'}, {'education_of_employee': 'category'}, {'has_job_experience': 'category'}, {'requires_job_training': 'category'}, {'no_of_employees': 'int'}, {'yr_of_estab': 'int'}, {'region_of_employment': 'category'}, {'prevailing_wage': 'int'}, {'unit_of_wage': 'category'}, {'full_time_position': 'category'}, {'case_status': 'category'}], 'numerical_columns': ['no_of_employees', 'prevailing_wage', 'yr_of_estab'], 'categorical_columns': ['case_id', 'continent', 'education_of_employee', 'has_job_experience', 'requires_job_training', 'region_of_employment', 'unit_of_wage', 'full_time_position', 'case_status'], 'drop_columns': ['case_id', 'yr_of_estab'], 'num_features': ['no_of_employees', 'prevailing_wage', 'company_age'], 'or_columns': ['has_job_experience', 'requires_job_training', 'full_time_position', 'education_of_employee'], 'oh_columns': ['continent', 'unit_of_wage', 'region_of_employment'], 'transform_columns': ['no_of_employees', 'company_age']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "958472b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'category'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.columns[0]['case_id']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "029826ce",
+   "id": "5c4a2bb8",
    "metadata": {},
    "outputs": [],
    "source": []
