Database connection and utils creation

--- a/notebooks/001_database_connection.ipynb
+++ b/notebooks/001_database_connection.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "958472b2",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "'category'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,8 +414,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "789b2cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from usa_visa.logger import setup_logging\n",
+    "from pathlib import Path   \n",
+    "setup_logging(Path(\"logs\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "5c4a2bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25480"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from usa_visa.utils.main_utils import MongoDbConnection\n",
+    "\n",
+    "connection = MongoDbConnection()\n",
+    "connection.count_documents()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0fd7bc50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  case_id continent education_of_employee has_job_experience  \\\n",
+      "0  EZYV01      Asia           High School                  N   \n",
+      "1  EZYV02      Asia              Master's                  Y   \n",
+      "2  EZYV03      Asia            Bachelor's                  N   \n",
+      "3  EZYV04      Asia            Bachelor's                  N   \n",
+      "4  EZYV05    Africa              Master's                  Y   \n",
+      "\n",
+      "  requires_job_training  no_of_employees  yr_of_estab region_of_employment  \\\n",
+      "0                     N            14513         2007                 West   \n",
+      "1                     N             2412         2002            Northeast   \n",
+      "2                     Y            44444         2008                 West   \n",
+      "3                     N               98         1897                 West   \n",
+      "4                     N             1082         2005                South   \n",
+      "\n",
+      "   prevailing_wage unit_of_wage full_time_position case_status  \n",
+      "0         592.2029         Hour                  Y      Denied  \n",
+      "1       83425.6500         Year                  Y   Certified  \n",
+      "2      122996.8600         Year                  Y      Denied  \n",
+      "3       83434.0300         Year                  Y      Denied  \n",
+      "4      149907.3900         Year                  Y   Certified  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = connection.mongo_to_df()\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87447a48",
    "metadata": {},
    "outputs": [],
    "source": []
