Database connection and utils creation

--- a/notebooks/concepts.ipynb
+++ b/notebooks/concepts.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "92149136",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
     "except NegativeValueError as e:\n",
     "    print(f\"Caught: {e}\")\n",
     "except ValueError as e:\n",
-    "    print(f\"Caught generic ValueError: {e}\")\n"
+    "    print(f\"Caught generic ValueError: {e}\")"
    ]
   },
   {
@@ -632,17 +632,17 @@
     "    1 / 0 # type: ignore\n",
     "except ZeroDivisionError:\n",
     "    _, _, exc_tb = sys.exc_info()\n",
-    "    file_name = exc_tb.tb_frame.f_code.co_filename # From the traceback object, it grabs the filename where the exception occurred.\n",
+    "    file_name = exc_tb.tb_frame.f_code.co_filename # type: ignore # From the traceback object, it grabs the filename where the exception occurred.\n",
     "    error_message = (\n",
     "    f\"Error occurred in python script [{file_name}] \"\n",
-    "    f\"at line [{exc_tb.tb_lineno}] \"\n",
+    "    f\"at line [{exc_tb.tb_lineno}] \" # type: ignore\n",
     "    )\n",
     "    print(error_message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "dfecfad1",
    "metadata": {},
    "outputs": [
@@ -680,9 +680,8 @@
     "        f\"Traceback:\\n{stack_trace}\"\n",
     "    )\n",
     "\n",
-    "\n",
     "try:\n",
-    "    1 / 0\n",
+    "    1 / 0 # type: ignore\n",
     "except Exception as e:\n",
     "    print(error_message_detail(e))"
    ]
@@ -707,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "02299e3f",
    "metadata": {},
    "outputs": [],
@@ -718,7 +717,7 @@
     "\n",
     "def risky_function():\n",
     "    try:\n",
-    "        1 / 0\n",
+    "        1 / 0 # type: ignore\n",
     "    except ZeroDivisionError as e:\n",
     "        logging.error(\"Math error\", exc_info=True)\n",
     "        raise AppError(\"Calculation failed\") from e"
