Database connection and utils creation

--- a/notebooks/001_database_connection.ipynb
+++ b/notebooks/001_database_connection.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "789b2cb4",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5c4a2bb8",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "25480"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0fd7bc50",
    "metadata": {},
    "outputs": [
@@ -488,8 +488,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "87447a48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8462\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = len(list(connection.collection.find({\"case_status\": \"Denied\"})))\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "816fbfc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.33210361067503924\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count / connection.count_documents())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dbb3b3f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6678963893249608"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(connection.collection.find({\"case_status\": \"Certified\"}))) / connection.count_documents()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c684bc26",
    "metadata": {},
    "outputs": [],
    "source": []
