--- a/notebooks/001_database_connection.ipynb
+++ b/notebooks/001_database_connection.ipynb
@@ -546,8 +546,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c684bc26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_mflix\n",
+      "usa_visa_db\n",
+      "admin\n",
+      "local\n"
+     ]
+    }
+   ],
+   "source": [
+    "for db in connection.client.list_database_names():\n",
+    "    print(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "509e33a8",
    "metadata": {},
    "outputs": [],
    "source": []
