Exploratory data analysis and modeling

--- a/notebooks/concepts.ipynb
+++ b/notebooks/concepts.ipynb
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f407be6b",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
     "try:\n",
     "    raise APIError(404, \"Resource not found\", \"/users/42\")\n",
     "except APIError as e:\n",
-    "    print(e)"
+    "    print(e) "
    ]
   },
   {
@@ -817,19 +817,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c593f87f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ No credentials found. Please run `aws configure` or provide keys. Error: Unable to locate credentials\n"
+     ]
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "from botocore.exceptions import NoCredentialsError\n",
+    "\n",
+    "# Define your bucket name and region\n",
+    "bucket_name = \"abefe-bucket-s3-v1\"\n",
+    "region = \"eu-north-1\"\n",
+    "\n",
+    "# Create an S3 client (credentials must already be configured)\n",
+    "s3 = boto3.client(\"s3\", region_name=region)\n",
+    "\n",
+    "try:\n",
+    "    # List objects in your bucket\n",
+    "    response = s3.list_objects_v2(Bucket=bucket_name)\n",
+    "\n",
+    "    if \"Contents\" in response:\n",
+    "        print(\"Files in bucket:\")\n",
+    "        for obj in response[\"Contents\"]:\n",
+    "            print(obj[\"Key\"])\n",
+    "    else:\n",
+    "        print(\"Bucket is empty or you don’t have access.\")\n",
+    "\n",
+    "except NoCredentialsError as e:\n",
+    "    print(f\"❌ No credentials found. Please run `aws configure` or provide keys. Error: {e}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4247144e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ AWS credentials not found. Please run `aws configure` or provide keys.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MissingAWSCredentials(Exception):\n",
+    "    \"\"\"Raised when AWS credentials are missing or invalid.\"\"\"\n",
+    "    def __init__(self, message=\"AWS credentials are missing or invalid\"):\n",
+    "        super().__init__(f\"❌ {message}\")\n",
+    "\n",
+    "\n",
+    "def list_bucket_objects(bucket_name, region=\"eu-north-1\"):\n",
+    "    s3 = boto3.client(\"s3\", region_name=region)\n",
+    "    try:\n",
+    "        response = s3.list_objects_v2(Bucket=bucket_name)\n",
+    "\n",
+    "        if \"Contents\" in response:\n",
+    "            return [obj[\"Key\"] for obj in response[\"Contents\"]]\n",
+    "        return []\n",
+    "    except NoCredentialsError as e:\n",
+    "        raise MissingAWSCredentials(\n",
+    "            \"AWS credentials not found. Please run `aws configure` or provide keys.\"\n",
+    "        ) from e\n",
+    "\n",
+    "try:\n",
+    "    files = list_bucket_objects(\"abefe-bucket-s3-v1\")\n",
+    "    print(\"Files:\", files)\n",
+    "except MissingAWSCredentials as e:\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "code",
